--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -190,6 +190,68 @@ button:hover { background-color: #1484a0; }
   Banner section styling ends here
 =================================*/
 /*=================================
+  Tabs section styling starts here
+=================================*/
+.tabs {
+  padding: 30px 0;
+  background-color: #007b5e;
+}
+
+.tabs h3 {
+  margin-bottom: 40px;
+  color: #fff;
+}
+
+.tab-list {
+  border-bottom: 1px solid #dee2e6;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+}
+
+.tab-list li {
+  width: 20%;
+  border-bottom: 3px solid transparent;
+  padding-bottom: 10px;
+  -webkit-transition: all .5s ease;
+  -o-transition: all .5s ease;
+  transition: all .5s ease;
+  text-align: center;
+}
+
+.tab-list li a {
+  color: #eee;
+  font-size: 20px;
+  text-transform: capitalize;
+}
+
+.tab-list .active-tab {
+  border-bottom: 3px solid #fff;
+}
+
+.tab-content {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  min-height: 100px;
+  padding: 15px 0;
+}
+
+.content {
+  display: none;
+  color: #eee;
+  font: normal 15px sans-serif;
+  letter-spacing: .5px;
+  line-height: 20px;
+}
+
+.active-content { display: block; }
+/*=================================
+  Tabs section styling ends here
+=================================*/
+/*=================================
   Customers section styling starts here
 =================================*/
 .customers { padding: 35px 0; }
@@ -321,6 +383,10 @@ h4 {
   .banner-content { width: 90%; }
 
   .banner-image { display: none; }
+
+  .tab-content { min-height: 200px; }
+
+  .tab-list li a { font-size: 18px; }
 }  
 
 /*media query for 340px starts here*/
@@ -333,6 +399,8 @@ h4 {
   }
 
   .banner-content p { font-size: 7px; }
+
+  .tab-list li a { font-size: 16px; }
 
   h4 { font-size: 18px; }
 
